[workspace]
members = ["icons"]

[package]
name = "hitide"
version = "0.17.1"
authors = ["Colin Reeder <colin@vpzom.click>"]
edition = "2024"
license = "AGPL-3.0-or-later"
description = "HTML frontend for Lotide"
repository = "https://sr.ht/~vpzom/hitide/"
readme = "README.md"
keywords = ["activitypub", "federation", "frontend"]
categories = ["web-programming"]
rust-version = "1.91.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
render = { path = "vendor/render.rs/render" }
trout = { path = "vendor/trout" }
hyper1 = { package = "hyper", version = "1.10.1", features = ["client", "http1", "server"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.20", features = ["client-legacy", "http1", "server", "tokio"] }
http-body-util = "0.1.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
serde_urlencoded = "0.7.1"
serde_json = "1.0.140"
serde_derive = "1.0.219"
serde = "1.0.219"
ginger = "0.1.0"
urlencoding = "2.1.3"
http = "1.4.2"
chrono = "0.4"
fluent-langneg = "0.13"
lazy_static = "1.5"
unic-langid = { version = "0.9.5", features = ["macros"] }
futures-util = "0.3.31"
hitide_icons = { path = "./icons" }
multer = "3.1"
fluent = "0.16.1"
log = "0.4"
env_logger = "0.11"
config = { version = "0.15.23", default-features = false, features = ["ini"] }
url = { version = "2.5.4", features = ["serde"] }
intl-memoizer = "0.5.2"
percent-encoding = "2.3.1"
bytes = "1.11.1"

[build-dependencies]
fluent-syntax = "0.11.1"
