[package]
name = "hitide_icons"
version = "0.1.0"
authors = ["Colin Reeder <colin@vpzom.click>"]
edition = "2018"
license = "AGPL-3.0-or-later"
description = "Generated icon lookup table for Hitide"
repository = "https://sr.ht/~vpzom/hitide/"
readme = "README.md"
keywords = ["activitypub", "frontend", "icons"]
categories = ["web-programming"]

[package.metadata.cargo-machete]
ignored = ["phf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.3", features = ["macros"] }
